--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android Phone Feature</title>
+        <!-- bootstrap link -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container text-center">
@@ -20,12 +24,14 @@
             </div>
         </div>
         <!-- Mobile container -->
-        <div id="Mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+        <div id="mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
         </div>
         
     </div>
 
-
+   <!-- bootstrap JS -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   <!-- Custom JS -->
     <script src="main.js"></script>
 </body>
 </html>
