--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <!-- Mobile container -->
         <div id="mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
         </div>
+        <!-- Signle Mobiledisplay in Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div id="mobileModal" class="modal-dialog h-auto">
+                <!-- from JavaScript -->
+            </div>
+        </div>
+    </div>
         
     </div>
 
