--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <div class="container text-center">
         <h2 id="heading" class="text-center text-success my-3"></h2>
+        <div class="loading" id="load">
+            <img src="./images/loading-36.gif" alt="">
+        </div>
 
         <div class="my-5">
             <div class="d-flex w-50 mx-auto search">
