--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container text-center">
         <h2 id="heading" class="text-center text-success my-3"></h2>
         <div class="loading" id="load">
-            <img src="./images/loading-36.gif" alt="">
+            <img src="./images/loading-36.gif" alt="loader-img">
         </div>
 
         <div class="my-5">
@@ -28,6 +28,7 @@
         </div>
         <!-- Mobile container -->
         <div id="mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+            <img src="./images/mobile.jpg" alt="">
         </div>
         <!-- Signle Mobiledisplay in Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
