--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             </div>
         </div>
         <!-- Mobile container -->
-        <div id="mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+        <div id="noData">
+            <h1> No data found!</h1>
+        </div>
+        <div id="mobile-container" class="row row-cols-1 row-cols-md-3 g-4 justify-content-center align-i">
             <img src="./images/mobile.jpg" alt="">
+
         </div>
         <!-- Signle Mobiledisplay in Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
